--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,76 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
+# --- Node.js and general ---
+node_modules
 /.pnp
 .pnp.*
+.pids
+*.pid
+*.seed
+*.pid.lock
+
+# --- Build output ---
+/build
+/dist
+/.next
+/out
+
+# --- Logs and debug ---
+logs
+*.log
+npm-debug.log*
+pnpm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+
+# --- Coverage and tests ---
+/coverage
+/.nyc_output
+
+# --- OS specific ---
+.DS_Store
+
+# --- IDEs and editors ---
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# VSCode settings
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# --- Environment files ---
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env*
+
+# --- Temporary files ---
+.temp
+.tmp
+
+# --- Diagnostic reports ---
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# --- Misc ---
+*.pem
+next-env.d.ts
+
+# --- Deployment ---
+.vercel
+
+# --- Yarn (keep useful folders) ---
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# env files (can opt-in for committing if needed)
-.env*
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
