--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,13 +27,13 @@ jobs:
         run: npm install
         working-directory: ./backend
 
-      - name: Lint
-        run: npm run lint
-        working-directory: ./backend
+      # - name: Lint
+      #   run: npm run lint
+      #   working-directory: ./backend
 
-      - name: Build NestJS backend API
-        run: npm run build
-        working-directory: ./backend
+      # - name: Build NestJS backend API
+      #   run: npm run build
+      #   working-directory: ./backend
   deploy:
     needs: build
     runs-on: ubuntu-latest
